# singular-factory

./: .gitignore  CanonicalForm.hs  Counting.hs  DList.hs  Domains.hs  Factory.hs  GFTables.hs  Parser.hs  Polynomial.hs  README.md  _links_  build.sh  main.hs  singular-factory.cabal
cpp_bits/: interface.cpp
src/Math/Singular/: Factory.hs
src/Math/Singular/Factory/: Counting.hs  Domains.hs  Expr.hs  GFTables.hs  Parser.hs  Polynomial.hs  Variables.hs
src/Math/Singular/Factory/Internal/: CanonicalForm.hs  DList.hs  Factory.hs
test/: testSuite.hs
