Name:                singular-factory
Version:             0.1
Synopsis:            Multivariate polynomial factorization via bindings to Singular-factory 
Description:         Bindings to Singular-factory. Factory is the subset of the Singular
                     computer algebra system which does factorization of multivariate 
                     polynomials (over integers, rationals, and finite fields)
License:             GPL
License-file:        LICENSE
Author:              Balazs Komuves
Maintainer:          bkomuves (plus) hackage (at) gmail (dot) com
homepage:            http://moire.be/haskell/
Stability:           Experimental
Category:            Math
Tested-With:         GHC == 8.6.5
Cabal-Version:       >= 1.24
Build-Type:          Simple

Source-repository head
  type:                git
  location:            https://github.com/bkomuves/singular-factory

Library
  Build-Depends:       base >= 4 && < 5, containers >= 0.5, text >= 1.0,
                       filepath >= 1.0, directory >= 1.3, process >= 1.2, 
                       hgmp >= 0.1.1
    
  Exposed-Modules:     Math.Singular.Factory.Domains
                       Math.Singular.Factory.Polynomial
                       Math.Singular.Factory.Counting
                       Math.Singular.Factory.Parser
                       Math.Singular.Factory.Internal.Factory
                       Math.Singular.Factory.GFTables
                       Math.Singular.Factory.Internal.CanonicalForm
                       Math.Singular.Factory.Internal.Factory
                       Math.Singular.Factory.Internal.DList
                           
  Extensions:          ForeignFunctionInterface, CPP, BangPatterns, TypeSynonymInstances

  Hs-Source-Dirs:      src
  
  cc-options:          -x c++
  c-sources:           cpp_bits/interface.cpp
  extra-libraries:     stdc++

  pkgconfig-depends:   factory
